<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="edit_text_first_name_hint">First Name</string>
    <string name="edit_text_last_name">Last Name</string>
    <string name="edit_text_nickname_hint">Nickname (Optional)</string>
    <string name="button_done_text">Done</string>
    <string name="text_view_list_empty">You have no contacts</string>
    <string name="button_delete_contact">Delete Contact</string>
    <string name="button_edit_contact">Update</string>

</resources>
