<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.globant.paulabaudo.contacts.AddContactActivity.AddContactFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_button_contact_photo"
        android:src="@drawable/placeholder_contact"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_text_first_name"
        android:layout_below="@+id/image_button_contact_photo"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_text_first_name_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_text_last_name"
        android:layout_below="@+id/edit_text_first_name"
        android:layout_alignLeft="@+id/edit_text_first_name"
        android:layout_alignStart="@+id/edit_text_first_name"
        android:hint="@string/edit_text_last_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_text_nickname"
        android:layout_below="@+id/edit_text_last_name"
        android:layout_alignLeft="@+id/edit_text_last_name"
        android:layout_alignStart="@+id/edit_text_last_name"
        android:hint="@string/edit_text_nickname_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_done_text"
        android:id="@+id/button_done"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_contact"
        android:id="@+id/button_delete"
        android:enabled="false"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
